# rtxch

./: .gitignore  Cargo.toml
src/: camera.rs  canvas.rs  cone.rs  constants.rs  cube.rs  cylinder.rs  environment.rs  intersections.rs  lib.rs  lights.rs  main.rs  materials.rs  matrices.rs  patterns.rs  plane.rs  projectile.rs  ray.rs  render.rs  shape.rs  sphere.rs  test_utils.rs  tuples.rs  utils.rs  world.rs
tests/: camera_test.rs  canvas_test.rs  cones_test.rs  cubes_test.rs  cylinders_test.rs  intersections_test.rs  lights_test.rs  materials_test.rs  matrices_test.rs  patterns_test.rs  planes_test.rs  rays_test.rs  spheres_test.rs  transformations_test.rs  tuples.rs  tuples_test.rs  world_test.rs
tests/features/: camera.feature  canvas.feature  cones.feature  cubes.feature  cylinders.feature  intersections.feature  materials.feature  matrices.feature  patterns.feature  planes.feature  rays.feature  spheres.feature  transformations.feature  tuples.feature  world.feature
