[package]
name = "rtxch"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1.0"

[dev-dependencies]
cucumber = "0.21.1"
futures = "0.3.30"

[lib]
name = "rtxch_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "tuples"
path = "tests\\tuples_test.rs"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "canvas"
path = "tests\\canvas_test.rs"
harness = false

[[test]]
name = "matrices"
path = "tests\\matrices_test.rs"
harness = false