[package]
name = "rtxch"
version = "0.1.0"
edition = "2021"

[dependencies]
perlin2d = "0.2.6"
wgpu = "22.1.0"

[dev-dependencies]
cucumber = "0.21.1"
futures = "0.3.30"

[lib]
name = "rtxch_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[test]]
name = "tuples"
path = "tests\\tuples_test.rs"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "canvas"
path = "tests\\canvas_test.rs"
harness = false

[[test]]
name = "matrices"
path = "tests\\matrices_test.rs"
harness = false

[[test]]
name = "transformations"
path = "tests\\transformations_test.rs"
harness = false

[[test]]
name = "rays"
path = "tests\\rays_test.rs"
harness = false

[[test]]
name = "intersections"
path = "tests\\intersections_test.rs"
harness = false

[[test]]
name = "spheres"
path = "tests\\spheres_test.rs"
harness = false

[[test]]
name = "lights"
path = "tests\\lights_test.rs"
harness = false

[[test]]
name = "materials"
path = "tests\\materials_test.rs"
harness = false

[[test]]
name = "world"
path = "tests\\world_test.rs"
harness = false

[[test]]
name = "camera"
path = "tests\\camera_test.rs"
harness = false

[[test]]
name = "planes"
path = "tests\\planes_test.rs"
harness = false

[[test]]
name = "patterns"
path = "tests\\patterns_test.rs"
harness = false

[[test]]
name = "cubes"
path = "tests\\cubes_test.rs"
harness = false

[[test]]
name = "cylinders"
path = "tests\\cylinders_test.rs"
harness = false

[[test]]
name = "cones"
path = "tests\\cones_test.rs"
harness = false